spade-tests/src/snapshots/spade_tests__const_generics__simple_unsatisfied_int_constraint_in_where_clause_errors2.snap
---
source: spade-tests/src/const_generics.rs
---
fn add_one<#uint N, #uint O>(in: int<N>) -> int<O>
where O: { N + 2 } {
    0
}

fn test() -> int<9> {
    add_one(10i8)
}


error: Output type mismatch. Expected int<9>, got int<10>
  ┌─ testinput:6:21
  │  
2 │   where O: { N + 2 } {
  │              ----- Type 10 inferred here
  ·  
6 │   fn test() -> int<9> {
  │                ------ int<9> type specified here
  │ ╭─────────────────────^
7 │ │     add_one(10i8)
8 │ │ }
  │ ╰─^ Found type int<10>
  │  
  = note: Expected: 9
                in: int<9>
               Got: 10
                in: int<10>
