spade-tests/src/snapshots/spade_tests__const_generics__struct_in_trait_bound_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
struct S {}
fn test<T: S>() {}


error: Expected S to be a trait
  ┌─ testinput:2:12
  │
1 │ struct S {}
  │ ----------- S is a struct
2 │ fn test<T: S>() {}
  │            ^ Expected a trait
