spade-tests/src/snapshots/spade_tests__const_generics__trait_bound_not_satisfied.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<T: X>(x: T)
{
    test(false)
}


error: Trait bound not satisfied. bool does not implement X
  ┌─ testinput:4:10
  │
2 │ fn test<T: X>(x: T)
  │            - Required because of the trait bound specified here
3 │ {
4 │     test(false)
  │          ^^^^^ bool does not implement X
